src/objects/TrocadeProduto__c.object
<CustomObject>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Trocar_por_Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descricao_do_produto_para_troca__c</fullName>
        <label>Descrição do produto para troca</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Produto para troca</label>
    <nameField>
        <label>Código do produto para troca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos para troca</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>